Landing page update

--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,11 @@
     padding-bottom: 16px;
     padding-left: 28px;
 }
+/* .sticky {
+    position: sticky;
+    top: 0;
+}
+.fixed {
+    position: fixed;
+    top: 0;
+} */
