--- a/src/index.css
+++ b/src/index.css
@@ -40,10 +40,7 @@
     padding-left: 0px;
 }
 .abt-padding{
-    padding-top: 0px;
-    padding-right: 32px;
-    padding-bottom: 0px;
-    padding-left: 32px;
+    padding: 0px 32px 0px 32px;
 }
 .bt-padding{
     padding-top: 12px;
@@ -67,4 +64,16 @@
 
 .freq-padding {
     padding: 46px 0px 96px 0px;
+}
+
+.margin {
+    margin: 5rem auto;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: 250px 1fr;
+  }
+.talk-p {
+    padding: 10px 14px 10px 14px;
 }
